Changed the profile photo.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Nao Oshima</span></h1>
-                <img src="./images/img_profile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./profile-sepia.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>大島奈央と申します。
                 <br>現在「日本ものを海外に出していきたい」という思いの元、転職活動に励む傍、
                 <br>「やはり販促活動や、広告活動にWEBは欠かせない存在だ」と考え、
