Change work photos

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2 class="text-center">Works</h2>
                 <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+                <img src="./images/card.jpg" alt="きらめき太郎様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき太郎様 名刺</h3>
@@ -70,7 +70,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/webdesign.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -82,7 +82,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/corporate-site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -93,7 +93,7 @@
             </a>
         </div><div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/corporate-site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
@@ -105,7 +105,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+                <img src="./images/card.jpg" alt="きらめき太郎様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき太郎様 名刺</h3>
@@ -117,7 +117,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/webdesign.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -129,7 +129,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき太郎様 名刺デザイン">
+                <img src="./images/card.jpg" alt="きらめき太郎様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき太郎様 名刺</h3>
@@ -141,7 +141,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/webdesign.jpg" alt="WordPressオリジナルテーマ">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>ブログデザイン</h3>
@@ -153,7 +153,7 @@
         </div>
         <div class="works-box">
             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/corporate-site.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
